# squealercpp

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_python.txt  README.md  example.db
backup/: main.cpp
include/: connection.h  database.h  pybind_module.h  sqltypes.h  statement.h  table.h
pytests/: example.db  squealer.db  squealercpp.db  test_performance.py  test_table.py
squealercpp/: Makefile  squealercpp.cpp  test.py
src/: connection.cpp  database.cpp  main.cpp  pybind_module.cpp  statement.cpp  table.cpp
src/backup/: database.cpp  main.cpp  table.cpp
tests/: main.cpp  test.cpp
